feat: refactor settingscontroller